k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: dev
spec:
  hosts:
    - "api.app.com"
  gateways:
    - "istio-system/app-gateway"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: my-service
            port:
              number: 8080
